fix layout on tablet screen --again

--- a/components/card/style/card.module.css
+++ b/components/card/style/card.module.css
@@ -19,3 +19,11 @@
     margin-top: 14px;
   }
 }
+@media only screen and (max-width: 768px) {
+  .root {
+    height: 90%;
+    width: 95%;
+    margin: 6px;
+    margin-top: 14px;
+  }
+}
