--- a/src/Layout/Banner/style/banner.module.css
+++ b/src/Layout/Banner/style/banner.module.css
@@ -55,3 +55,23 @@
     margin-top: 3%;
   }
 }
+@media only screen and (max-width: 768px) {
+  .banner {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .banner_content {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+  .img {
+    width: 100%;
+  }
+  .banner_details {
+    width: 100%;
+  }
+  .banner_details div {
+    margin-top: 3%;
+  }
+}
